# Try-Instant-Fit

./: .cursorrules  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  Prompt.txt  README.md  install.ps1  install.sh  justfile  pyproject.toml
.claude/: settings.json
.claude/hooks/: __init__.py  post_tool_use.py  pre_tool_use.py  save_resume_state.py  session_end.py  session_start.py  session_summary.py
.claude/hooks/setup/: init.ps1  init.sh  maintenance.ps1  maintenance.sh  run-setup.sh
.claude/hooks/templates/: compact_execution.md  compact_onboarding_resume.md  compact_planning.md  (+1 more)
.claude/sessions/: 42fe6dba.session  4417fedf.session  5ff2a610.session  b75da6b4.session  da67b6d7.session
.cursor/rules/: nexus.mdc
.github/workflows/: test-installers.yml
00-system/: system-map.md
00-system/core/: README.md  manual-init.md  nexus-loader.py  orchestrator.md
00-system/documentation/: framework-overview.md  product-overview.md  structure.md  ux-expert-philosophy.md  ux-onboarding-philosophy.md
00-system/nexus_cli/: __init__.py
00-system/skills/: README.md
00-system/tests/: conftest.py  test_file_ops.py  test_onboarding_flow.py  test_validators.py
01-memory/: user-config.yaml
02-builds/: README.md
03-skills/: README.md
backend/: package-lock.json  package.json
demo/: about.html  account.html  cart.html  collections.html  index.html  product.html
demo/css/: main.css
demo/js/: ghostlayer-widget.js
ghost-layer-widget/: package.json
ghost-layer-widget/src/: index.ts
website/: dashboard.html  install.html
(+519 files in other folders)
